--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,1 +1,29 @@
-<h1>Lasagna</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Lasagna</h1>
+    <img src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg">
+    <h2>Description</h2>
+    <p>John Chandler's "Worlds best Lasagna" is loved by millions and is the perfect dinner for yourself, family, and friends! 
+        This recipe will create 12 servings and should take about 3 hours and 15 miunes to make.</p>
+    <br>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Meat</li>
+        <li>Onion and Garlic</li>
+        <li>Tomato products</li>
+        <li>Suagr</li>
+        <li>Spices and Seasonings</li>
+        <li>Lasagna noodles</li>
+        <li>Cheeses</li>
+        <li>Egg</li>
+    </ul>
+</body>
+</html>
