--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <br>
+    <a href="recipes/grilled-cheese.html">Grilled Cheese Sandwich Recipe</a>
 </body>
 </html>
