--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna Recipe</a>
-    <br>
     <a href="recipes/grilled-cheese.html">Grilled Cheese Sandwich Recipe</a>
-    <br>
     <a href="recipes/grilled-pork-loin.html">Grilled Pork Loin Chops Recipe</a>
 </body>
 </html>
